@@ -1,7 +1,6 @@
 blib/
 const-c.inc
 const-xs.inc
-inc/
 MANIFEST.bak
 Makefile
 Makefile.old
