@@ -1,23 +1,0 @@
-Changes
-compat.h
-inc/Module/Install.pm
-inc/Module/Install/Base.pm
-inc/Module/Install/Can.pm
-inc/Module/Install/Fetch.pm
-inc/Module/Install/Makefile.pm
-inc/Module/Install/Metadata.pm
-inc/Module/Install/Win32.pm
-inc/Module/Install/WriteAll.pm
-lib/PAM.pm
-lib/PAM/Constants.pm
-lib/PAM/Handle.pm
-Makefile.PL
-MANIFEST			This list of files
-META.yml
-PAM.xs
-pam_perl.c
-perl_helper.h
-perl_helper.c
-ppport.h
-README
-typemap
