@@ -1,0 +1,3 @@
+inc/PAMMakeMaker.pm
+MANIFEST.SKIP
+dist.ini
