@@ -1,0 +1,23 @@
+name    = PAM
+version = 0.30
+author  = Jonathan Steinert <hachi@cpan.org>
+license = Perl_5
+copyright_holder = Jonathan Steinert
+
+[@Filter]
+  -bundle = @Classic
+  -remove = MakeMaker
+
+[=inc::PAMMakeMaker / PAMMakeMaker]
+
+[Prereqs / ConfigureRequires ]
+ExtUtils::Depends  = 0
+XS::Object::Magic  = 0
+
+[Prereqs / BuildRequires ]
+ExtUtils::Constant = 0
+ExtUtils::Embed    = 0
+XS::Object::Magic  = 0
+
+[Prereqs / RuntimeRequires ]
+XS::Object::Magic  = 0
