@@ -1,5 +1,11 @@
 package PAM::Handle;
 
+=head1 NAME
+
+PAM::Handle - Perl representation of pam_handle_t object
+
+=cut
+
 use PAM;
 
 1;
